<resources>
    <string name="app_name" translatable="false">&appname;</string>
    <string name="version">"Version 1.2.3"</string>
    <string name="packagename" translatable="false">"com.trioangle.makentspace"</string>
    <string name="baseurl" translatable="false">"&baseUrl;api/</string>
    <string name="helplink" translatable="false">"&baseUrl;help</string>
    <string name="whyhostlink" translatable="false">"&baseUrl;why_host"</string>
    <string name="sharelink" translatable="false">"&baseUrl;rooms/"</string>
    <string name="sharelinkexp" translatable="false">"&baseUrl;experiences/"</string>
    <string name="termslink" translatable="false">"&baseUrl;terms_of_service"</string>
    <string name="guestrefund" translatable="false">"&baseUrl;guest_refund"</string>
    <string name="hostguarantee" translatable="false">"&baseUrl;host_guarantee"</string>
    <string name="privacylink" translatable="false">"&baseUrl;privacy_policy"</string>
    <string name="appleredirecturl" translatable="false">"&baseUrl;api/apple_callback"</string>
    <string name="policy" translatable="false"><html>"By signing up, I agree to &appname;'s "
      <a link="http://makentspace.trioangle.com/terms_of_service"><u>"Terms of Service, "</u></a>
      <a link="http://makentspace.trioangle.com/privacy_policy"><u>"Non-Discrimination Policy, "</u></a>
      <a link="http://makentspace.trioangle.com/privacy_policy"><u>"Payments Terms of Service, "</u></a>
      <a link="http://makentspace.trioangle.com/privacy_policy"><u>"Privacy Policy, "</u></a>
      <a link="http://makentspace.trioangle.com/guest_refund"><u>"Guest Refund Policy, "</u></a>and
      <a link="http://makentspace.trioangle.com/host_guarantee"><u>"Host Guarantee Terms."</u></a></html>
     </string>
    <string name="facebook_key" translatable="false">&facebook_key;</string>
    <string name="facebook_provider" translatable="false">"com.facebook.app.FacebookContentProvider&facebook_key;"</string>
    <string name="google_key" translatable="false">&google_key_url;</string>
    <string name="google_map_key" translatable="false">&google_maps_key;</string>
    <string name="mapurl" translatable="false">"https://maps.googleapis.com/maps/api/"</string>
    <string name="fonts_logo" translatable="false">"fonts/Airglyphs.ttf"</string>
    <string name="fonts_Bold" translatable="false">"fonts/CircularAir-Bold.otf"</string>
    <string name="fonts_Book" translatable="false">"fonts/CircularAir-Book.otf"</string>
    <string name="fonts_makent_logo" translatable="false">"fonts/Makent-Logo.ttf"</string>
    <string name="fonts_makent1" translatable="false">"fonts/makent1.ttf"</string>
    <string name="fonts_makent2" translatable="false">"fonts/makent2.ttf"</string>
    <string name="fonts_makent3" translatable="false">"fonts/makent3.ttf"</string>
    <string name="fonts_makent4" translatable="false">"fonts/makent4.ttf"</string>
    <string name="layout_direction">0</string>
    <string name="f1like" translatable="false">B</string>
    <string name="f1like1" translatable="false">C</string>
    <string name="f1share" translatable="false">S</string>
    <string name="flogoinvite" translatable="false">s</string>
    <string name="flogosetting" translatable="false">R</string>
    <string name="flogohelp" translatable="false">2</string>
    <string name="f1whyhost" translatable="false">c</string>
    <string name="f1users" translatable="false">.</string>
    <string name="f3calendar" translatable="false">i</string>
    <string name="f4checknormal" translatable="false">n</string>
    <string name="f4check" translatable="false">o</string>
    <string name="f4checkplus" translatable="false">k</string>
    <string name="f4checkminus" translatable="false">j</string>
    <string name="f4globe" translatable="false">d</string>
    <string name="f4searchmap" translatable="false">f</string>
    <string name="dot" translatable="false">"·"</string>
    <string name="sigin_terms1">"By signing up, I agree to &appname;'s  "</string>
    <string name="sigin_terms7">"  "</string>
    <string name="sigin_terms2">"Terms of Service"</string>
    <string name="sigin_terms3">"Non-Discrimination Policy "</string>
    <string name="sigin_terms4">"Privacy Policy"</string>
    <string name="sigin_terms5">"Guest Refund Policy "</string>
    <string name="sigin_terms6">"Host Guarantee Terms"</string>
    <string name="anim_speed">"50"</string>
    <string name="Comma" translatable="false">", "</string>
    <string name="sign_apple">Continue with Apple</string>
    <string name="and">" and "</string>
    <string name="menudelete">"Delete"</string>
    <string name="menuarchive">"Archive"</string>
    <string name="menueveryone">"Make Public"</string>
    <string name="menuonlyme">"Make Private"</string>
    <string name="login">Log in</string>
    <string name="welcome">Welcome to &appname;.</string>
    <string name="createaccount">Create Account</string>
    <string name="continue_google">Continue with Google</string>
    <string name="continue_facebook">Continue with Facebook</string>
    <string name="continue_">Continue</string>
    <string name="spotsleft_alert">"Do you Want to Continue with Available SpotsLeft\t"</string>
    <string name="alter_title">Available Spots Left </string>
    <string name="name_title">"What's your name?"</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="email_title">"And, your email?"</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="emailalreadyexits">"You already have an account with this email. \nTry logging in, instead."</string>
    <string name="emailalreadyuse1">Log In Error</string>
    <string name="password_title">Create a password</string>
    <string name="password_msg">Your password must be include at least one symbol and be 8 or more characters long.</string>
    <string name="password">PASSWORD</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="hours_total">hours total</string>
    <string name="meet_your_host">Meet Your Host,</string>
    <string name="reviewss">reviews</string>
    <string name="guest_age">Guests ages</string>
    <string name="can_attend">and up can attend.</string>
    <string name="facebook_title">"Looks good?"</string>
    <string name="facebook_msg">"Make sure your information is correct before continuing."</string>
    <string name="birth_day">BIRTHDAY</string>
    <string name="availableexperience">"available experience"</string>
    <string name="availableexperiences">"available experiences"</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_title">Log In</string>
    <string name="showpassword">Show Password</string>
    <string name="retry">Retry</string>
    <string name="invalidelogin">Invalid Login details  </string>
    <string name="invalidesignup">Invalid Signup details  </string>
    <string name="datesnotavailable">"Those dates are not available..."</string>
    <string name="pleasepickpreviousdate">Please pick previous date</string>
    <string name="forgot_title">"Forgot your password?"</string>
    <string name="forgot_msg">Enter your email to find your account.</string>
    <string name="forgot_email_send">A link to reset your password has been sent to  </string>
    <string name="forgot_invalid_mail">No account exists for the requested email address</string>
    <string name="dob_title">"When is your birthday?"</string>
    <string name="dob_msg">"You must be at least 18 years old to use &appname;. Others won't see your birthday."</string>
    <string name="dob">"BIRTHDAY"</string>
    <string name="setdob">Set your birth date</string>
    <string name="cancelc">CANCEL</string>
    <string name="view_edit">View and edit profile</string>
    <string name="invite_friends">Invite friends</string>
    <string name="switch_to">Switch to Hosting</string>
    <string name="switch_to_t">Switch to Travelling</string>
    <string name="settings">Settings</string>
    <string name="Help">"Help &amp; Support</string>
    <string name="whyhost">Why host</string>
    <string name="logout">Log out</string>
    <string name="logout_msg">Are you sure you want to \nlogout?</string>
    <string name="terms">When you book,you agree to the Makent Additional Terms of Service,Guest Release and Waiver,and Cancellation Policy</string>
    <string name="review_guest_requirment">Review Guest Requirements</string>
    <string name="guest_reqr">Guest Requirements</string>
    <string name="explore">Explore</string>
    <string name="bookings">Bookings</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>
    <string name="choose">Choose</string>
    <string name="wishlist">"Saved"</string>
    <string name="booking_title">Booking</string>
    <string name="review">Reviews</string>
    <string name="review_one">Review</string>
    <string name="review_s">reviews</string>
    <string name="review_s_one">review</string>
    <string name="where">"Where"</string>
    <string name="anywhere">"Anywhere</string>
    <string name="nearby">"Nearby</string>
    <string name="whereto">"Where to?"</string>
    <string name="makent_hosts_experience_event_cancellation_policy"><![CDATA[Makent Hosts Experience & Event Cancellation policy]]></string>
    <string name="u2022_any_experience"> Any experience or event, canceled within 24 hours of booking, is eligible for a full refund.</string>
    <string name="when">"When"</string>
    <string name="guest">"&#160;Guest"</string>
    <string name="read_more">read more</string>
    <string name="pets">"Pets</string>
    <string name="what_i_ll_provide">what i\'ll provide</string>
    <string name="clear">Clear all</string>
    <string name="map">MAP</string>
    <string name="filters">FILTERS</string>
    <string name="nodata_msg">"We couldn't find any listings. \n Try  removing your filters"</string>
    <string name="removefilter">"Remove all filters"</string>
    <string name="guests">"&#160; Guests"</string>
    <string name="rooms">"Bedrooms"</string>
    <string name="beds">"beds"</string>
    <string name="bath">"bath"</string>
    <string name="s_guest">"Guest"</string>
    <string name="g_guest">"Guests</string>
    <string name="is_shared">"Note: This is a shared room"</string>
    <string name="bedroom">"bedroom"</string>
    <string name="s_bedroom">"bedrooms"</string>
    <string name="bed">"bed"</string>
    <string name="bathroom">"bathroom"</string>
    <string name="s_bathroom">"bathrooms"</string>
    <string name="about_home">About this home</string>
    <string name="about_listing">About this listing</string>
    <string name="checkin">Check-In time</string>
    <string name="guide">View Guidebook</string>
    <string name="chin">Check-in</string>
    <string name="chout">Check-out</string>
    <string name="inbox_msg">You have no unread messages</string>
    <string name="save">"Save"</string>
    <string name="reset">"Reset"</string>
    <string name="cancel">"Cancel"</string>
    <string name="payouts">"Payouts"</string>
    <string name="payout_title">"Set up your &appname; payout method"</string>
    <string name="payout_msg">Your payout is what you earn from hosting a guest. Payouts are sent 14 days after each check-out.</string>
    <string name="payout_link">"Learn more about payouts"</string>
    <string name="addpayout">Add Payout Method</string>
    <string name="addstripepayout">Add Stripe Payout</string>
    <string name="sunday">"S"</string>
    <string name="monday">"M"</string>
    <string name="Tuesday">"T"</string>
    <string name="Wednesday">"W"</string>
    <string name="Thursday">"T"</string>
    <string name="Friday">"F"</string>
    <string name="Saturday">"S"</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
</resources>