<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="@string/layout_direction"
    android:background="@color/g_end"
    >

    <RelativeLayout
        android:id="@+id/messagehost_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.makent.trioangle.palette.Button.MakentAwesomeButton
            android:id="@+id/calendar_close"
            android:layout_width="30dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="&#xF138;"
            android:textSize="@dimen/small"
            android:gravity="center"
            android:paddingStart="10dp"
            android:layout_marginStart="20dp"
            android:textAlignment="textStart"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:textColor="@color/title_text_color"/>

        <com.makent.trioangle.palette.TextView.MakentBookTextView
            android:id="@+id/calendar_clear"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="20dp"
            android:paddingTop="10dp"
            android:layout_alignParentEnd="true"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_height="wrap_content"
            android:textSize="@dimen/mid"
            android:textColor="@color/title_text_color"
            android:text="@string/reset"/>
        >
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:showDividers="middle"
        android:gravity="center"
        android:dividerPadding="5dp"
        android:divider="@drawable/divider"
        android:background="@android:color/transparent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <com.makent.trioangle.palette.TextView.MakentLightTextView
            android:id="@+id/cal_chin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/bigb"
            android:gravity="center"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:paddingEnd="20dp"
            android:textColor="@color/title_text_color"
            android:text="@string/chin"/>




        <com.makent.trioangle.palette.TextView.MakentLightTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textAlignment="textEnd"
            android:textSize="@dimen/bigb"
            android:textColor="@color/title_text_color"
            android:text="@string/chout"
            android:id="@+id/cal_chout"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/d_slash_line"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView6" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/day_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="7">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            style="@style/CalendarCell.DayHeader"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalendarCell.DayHeader"
            android:text="@string/monday"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalendarCell.DayHeader"
            android:text="@string/Tuesday"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalendarCell.DayHeader"
            android:text="@string/Wednesday"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalendarCell.DayHeader"
            android:text="@string/Thursday"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalendarCell.DayHeader"
            android:text="@string/Friday"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CalendarCell.DayHeader"
            android:text="@string/Saturday"
            />
    </LinearLayout>
    <ImageView
        android:id="@+id/room_details_hrline"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height=".1dp"
        android:background="@drawable/d_blueline_bottom"/>
    <com.squareup.timessquare.CalendarPickerView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:scrollbarStyle="outsideOverlay"
        android:clipToPadding="false"
        android:background="@color/transparent"
        app:tsquare_dayBackground="@drawable/custom_calendar_bg_selector"
        app:tsquare_dayTextColor="@color/custom_calendar_text_selector"
        app:tsquare_dividerColor="@color/transparent"
        app:tsquare_titleTextColor="@color/custom_calendar_text_selector"
        app:tsquare_headerTextColor="@color/custom_header_text"
        />

    <ImageView
        android:id="@+id/room_details_hrline2"
        android:layout_width="match_parent"
        android:layout_height=".1dp"
        android:background="@drawable/d_blueline_bottom" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/rltPickDrop"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="visible"
        android:layout_below="@+id/room_details_hrline2">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/start_time"
                android:textColor="@color/title_text_color"
                android:text="@string/start_time"/>

            <Spinner
                android:id="@+id/spnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_time"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/title_text_color"
                android:dropDownWidth="112dp"
                />

        </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@+id/spnStart"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/end_time"
            android:layout_marginLeft="6dp"
            android:textColor="@color/title_text_color"
            android:text="@string/end_time"/>
        <Spinner
            android:id="@+id/spnEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/end_time"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/title_text_color"
            android:gravity="right"
            android:dropDownWidth="112dp"

            />
    </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/room_details_hrline1"
        android:layout_width="match_parent"
        android:layout_height=".1dp"
        android:visibility="gone"
        android:background="@drawable/d_blueline_bottom"/>

    <LinearLayout
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@android:color/transparent"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">
    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/d_blue_button"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="@dimen/midb"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:minHeight="50dp"
        android:textColor="@color/title_text_color"
        />
        </LinearLayout>
</LinearLayout>
